examples/test/testpolicy3226.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3226
  namespace: namespace149
spec:
  podSelector:
    matchLabels:
      key5: value35
      key1: value45
      key29: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value40
          key10: value20
          key47: value40
      podSelector:
        matchLabels:
          key10: value0
          key48: value10
